--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<%= form_tag("/users", method: "post") do %>
+...
+<div class="form-group">
+  <%= rucaptcha_input_tag(class: 'form-control', placeholder: 'Input Captcha') %>
+  <%= rucaptcha_image_tag(alt: 'Captcha') %>
+</div>
+...
+
+<div class="form-group">
+  <button type="submit" class="btn btn-primary">Submit</button>
+</div>
+<% end %>
