--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,26 @@
-// Place all the styles related to the users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.users-body {
+  overflow: hidden;
+  position: relative;
+  .users-page-panel {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 100%;
+
+    >.container {
+      height: 100%;
+      .users-new-row {
+        height: 100%;
+        .form-row {
+          padding-bottom: 1rem;
+          .captcha {
+            width: 100%;
+            height: 38px;
+          }
+        }
+      }
+    }
+  }
+}
