--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -18,6 +18,7 @@
           .captcha {
             width: 100%;
             height: 38px;
+            margin-top: 10px;
           }
         }
       }
